--- a/REACT/src/components/PagesJSX/Checkout/Checkout.css
+++ b/REACT/src/components/PagesJSX/Checkout/Checkout.css
@@ -14,8 +14,28 @@
     width: 4px;
   }
 
-  .checkout-container::-webkit-scrollbar-track {
+  .secao-usuario {
+    display: flex;
+    flex-direction: column;
+    padding: 2vh;
+    width: 50%;
+    margin: 0 auto;
+    align-items: center;
     background: #002855;
+    border-radius: 5vh;
+  }
+  .secao-usuario .titulo {
+    font-size: 3vh;
+    color: #dcdfe5;
+  }
+  .secao-usuario .email {
+    font-size: 2.5vh;
+    margin-top: 1vh;
+    color: #dcdfe5;
+  }
+
+  .checkout-container::-webkit-scrollbar-track {
+    background: #dcdfe5;
   }
 
   .checkout-container::-webkit-scrollbar-thumb {
@@ -46,7 +66,7 @@
     height: 100%;
     border-radius: 5px;
     border: none;
-    box-shadow: 2px 2px 0 0 #002855;
+    box-shadow: 2px 2px 0 0 #dcdfe5;
     background: #598900;
     color: #fafafa;
     transition: 0.1s ease-in-out;
@@ -57,7 +77,7 @@
     transform: translateY(3px);
     transform: translateX(3px);
     /* background: #88b82d; */
-    box-shadow: 0 0 0 0 #002855;
+    box-shadow: 0 0 0 0 #dcdfe5;
   }
 }
 
@@ -87,7 +107,7 @@
   }
 
   .checkout-container::-webkit-scrollbar-track {
-    background: #002855;
+    background: #dcdfe5;
   }
 
   .checkout-container::-webkit-scrollbar-thumb {
@@ -118,7 +138,7 @@
     height: 100%;
     border-radius: 5px;
     border: none;
-    box-shadow: 2px 2px 0 0 #002855;
+    box-shadow: 2px 2px 0 0 #dcdfe5;
     background: #598900;
     color: #fafafa;
     transition: 0.1s ease-in-out;
@@ -129,6 +149,6 @@
     transform: translateY(3px);
     transform: translateX(3px);
     /* background: #88b82d; */
-    box-shadow: 0 0 0 0 #002855;
+    box-shadow: 0 0 0 0 #dcdfe5;
   }
 }
