--- a/REACT/src/components/AdmCatalogo/AdmCatalogo.css
+++ b/REACT/src/components/AdmCatalogo/AdmCatalogo.css
@@ -7,44 +7,45 @@
 
 @media (max-width: 500px) {
   .produto {
-    margin-left: 0.5vh;
-    margin-right: 0.5vh;
+    margin: 0.5vh;
+    margin-bottom: 0;
     display: flex;
-    flex-direction: row;
     background-color: #dcdfe5;
-    border-radius: 5px 5px 0 0;
-    justify-content: space-around;
+    border-radius: 1rem 1rem 0 0;
+    justify-content: space-between;
   }
   .imagem {
-    margin: 0.1vh;
+    width: 50%;
   }
 
   .img-produto {
-    height: 200px;
-    border-radius: 2px;
+    width: 100%;
+    border-top-left-radius: 1rem;
   }
   .descricao {
+    padding: 0.5rem 0.5rem 0.2rem 0.5rem;
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: space-between;
+    width: 50%;
   }
-
-  .descricao p {
-    color: black;
+  .texto-adm-produto {
+    text-align: center;
+    font-size: 1.5rem;
+    color: #002855;
     text-decoration: none;
   }
 
   .alterar {
-    padding-top: 0.5vh;
+    padding: 0.2rem;
     margin: 0 auto;
     display: flex;
+    align-items: center;
     justify-content: center;
     background-color: #dcdfe5;
-    margin-left: 0.5vh;
-    margin-right: 0.5vh;
-    margin-bottom: 1vh;
-    border-radius: 0 0 5px 5px;
+    margin: 0.5vh;
+    margin-top: 0;
+    border-radius: 0 0 0.7rem 0.7rem;
   }
   .icone-alterar {
     color: #dcdfe5;
@@ -56,6 +57,9 @@
   .botao-alterar {
     background-color: #002855;
     border-radius: 8px;
+    color: #fafafa;
+    padding: 0.3rem 1rem;
+    font-size: 1.5rem;
     border: none;
     transition: 0;
   }
@@ -103,6 +107,11 @@
     cursor: pointer;
     margin-top: 1vh;
     background-color: black;
+  }
+
+  .link-botao-atualizar {
+    color: #fafafa;
+    text-decoration: none;
   }
 
   .modal-form label {
