--- a/REACT/src/components/PagesJSX/Checkout/Checkout.css
+++ b/REACT/src/components/PagesJSX/Checkout/Checkout.css
@@ -56,6 +56,7 @@
     align-items: center;
     justify-content: center;
     background: transparent;
+    color: #002855;
   }
   .finalizar-compra .comprar {
     width: 85vw;
