--- a/REACT/src/components/PagesJSX/Usuario/Usuario.css
+++ b/REACT/src/components/PagesJSX/Usuario/Usuario.css
@@ -103,49 +103,57 @@
 
 @media (min-width: 500px) {
   .main {
-    width: 500px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    overflow-y: scroll;
+    height: 100vh;
     margin: 0 auto;
+    max-width: 50%;
   }
+
+  .main::-webkit-scrollbar {
+    width: 4px;
+  }
+
+  .main::-webkit-scrollbar-track {
+    background: #002855;
+  }
+
+  .main::-webkit-scrollbar-thumb {
+    background-color: #dcdfe5;
+    width: 100%;
+  }
+
   .user-main {
     margin: 0 auto;
     display: flex;
     flex-direction: column;
-    width: 500px;
     height: 100vh;
-    overflow-y: scroll;
-    background: #dcdfe5;
-    height: 92vh;
-    border-left: 1px solid #dcdfe5;
-    border-top: 1px solid #dcdfe5;
+    background: #fafafa;
+    height: 100vh;
+    min-height: max-content;
   }
 
   .perfil {
     display: flex;
     flex-direction: column;
-    margin-top: 3vh;
+    margin-top: 2rem;
     align-items: center;
     justify-content: center;
-    width: 500px;
   }
 
   .icone-coroa {
-    font-size: 5vw;
+    font-size: 4rem;
     color: #002855;
   }
 
   .icone {
-    color: #dcdfe5;
-    font-size: 2vw;
+    color: #002855;
+    font-size: 7.5vw;
     margin-top: 0.5vh;
     margin-right: 1vh;
   }
 
   .nome-perfil {
-    font-size: 3vw;
+    font-size: 2rem;
     margin-bottom: 10vh;
   }
 
@@ -155,24 +163,39 @@
     align-items: center;
     justify-content: center;
     margin-bottom: 10vh;
-    width: 500px;
   }
 
   .dados-user {
     background-color: #002855;
-    border-radius: 5px;
+    border-radius: 0.5rem;
+    padding-left: 0.5rem;
     margin-bottom: 2vh;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
     width: 90%;
   }
 
-  .dados-user h3 {
+  .dados-user .link-user {
+    background-color: #dcdfe5;
+    height: 2.5rem;
+    width: 2.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0.2rem;
+    border-radius: 0.5rem;
+    margin: 0.5rem;
+  }
+
+  .dados-user p {
     color: #fafafa;
-    font-size: 2vw;
+    font-size: 1.7rem;
     margin-left: 1vh;
     margin-top: 1vh;
     margin-bottom: 1vh;
+    width: 70%;
+    text-align: left;
   }
 }
