Ajustes de telas novas

--- a/REACT/src/components/PagesJSX/Pedidos/Pedidos.css
+++ b/REACT/src/components/PagesJSX/Pedidos/Pedidos.css
@@ -28,10 +28,39 @@
 }
 
 @media (min-width: 500px) {
-  .main {
-    background-color: #002855;
+  .main-pedidos{
+    width: 710px;
+      margin: 0 auto;
+      background-color: #fafafa;
+      padding: 5px;
+      height: 93vh;
+      overflow-y: scroll;
+      border-bottom: 1px solid #dcdfe5;
+      border-left: 1px solid #dcdfe5;
+      border-top: 1px solid #dcdfe5;
+      border-radius: 10px;
+    
   }
   .pedidos-status {
-    height: 92vh;
+    width: 700px;
+    margin: 0 auto;
+    background: #002855;
+    overflow-y: scroll;
+    height: 90vh;
+    color: #161616;
   }
+
+  .pedidos-status::-webkit-scrollbar {
+    width: 4px;
+  }
+
+  .pedidos-status::-webkit-scrollbar-track {
+    background: #002855;
+  }
+
+  .pedidos-status::-webkit-scrollbar-thumb {
+    background-color: #dcdfe5;
+    width: 100%;
+  }
+  
 }
