--- a/REACT/src/components/AdmCatalogo/AdmCatalogo.css
+++ b/REACT/src/components/AdmCatalogo/AdmCatalogo.css
@@ -91,7 +91,7 @@
   .modal-topo img {
     border-radius: 5px;
   }
-  .modal-form input,
+  
   .enviar-produto {
     width: 100%;
     height: 3.5vh;
@@ -114,13 +114,7 @@
     text-decoration: none;
   }
 
-  .modal-form label {
-    display: flex;
-    justify-content: center;
-    color: #002855;
-    font-size: 2.5vh;
-    margin-top: 0.3vh;
-  }
+  
   .alterar p {
     font-size: 2vh;
   }
@@ -137,38 +131,37 @@
     justify-content: center;
   }
   .imagem {
-    margin: 0.1vh;
-    margin-right: 5vh;
+    width: 50%;
   }
 
   .img-produto {
-    height: 300px;
-    border-radius: 2px;
+    width: 100%;
+    border-top-left-radius: 1rem;
   }
   .descricao {
+    padding: 0.5rem 0.5rem 0.2rem 0.5rem;
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: space-between;
-    width: 60%;
+    width: 50%;
   }
-
-  .descricao p {
-    color: black;
+  .texto-adm-produto {
+    text-align: center;
+    font-size: 1.5rem;
+    color: #002855;
     text-decoration: none;
-    font-size: 3vh;
   }
 
   .alterar {
-    padding-top: 0.5vh;
+    padding: 0.2rem;
     margin: 0 auto;
     display: flex;
+    align-items: center;
     justify-content: center;
     background-color: #dcdfe5;
-    margin-left: 0.5vh;
-    margin-right: 0.5vh;
-    margin-bottom: 1vh;
-    border-radius: 0 0 5px 5px;
+    margin: 0.5vh;
+    margin-top: 0;
+    border-radius: 0 0 0.7rem 0.7rem;
   }
   .icone-alterar {
     color: #dcdfe5;
@@ -180,7 +173,11 @@
   .botao-alterar {
     background-color: #002855;
     border-radius: 8px;
+    color: #fafafa;
+    padding: 0.3rem 1rem;
+    font-size: 1.5rem;
     border: none;
+    transition: 0;
   }
 
   .fechar {
@@ -210,7 +207,7 @@
   .modal-topo img {
     border-radius: 5px;
   }
-  .modal-form input,
+  
   .enviar-produto {
     width: 100%;
     height: 3.5vh;
@@ -227,19 +224,13 @@
     margin-top: 1vh;
     background-color: black;
   }
-  .enviar-produto:hover {
-    background-color: #dcdfe5;
-    transition: 0.3s;
-    color: #002855;
+
+  .link-botao-atualizar {
+    color: #fafafa;
+    text-decoration: none;
   }
 
-  .modal-form label {
-    display: flex;
-    justify-content: center;
-    color: #002855;
-    font-size: 2.5vh;
-    margin-top: 0.3vh;
-  }
+  
   .alterar p {
     font-size: 2vh;
   }
