--- a/REACT/src/components/ModalAtualizarProduto/ModalAtualizarProduto.css
+++ b/REACT/src/components/ModalAtualizarProduto/ModalAtualizarProduto.css
@@ -1,3 +1,6 @@
+@media (max-width: 500px) {
+
+
 .background-blur {
   position: fixed;
   width: 100%;
@@ -103,4 +106,117 @@
   font-size: 1.5rem;
   border-bottom-left-radius: 2vh;
   border-bottom-right-radius: 2vh;
+}
+
+}
+
+@media (min-width: 500px) {
+
+  .background-blur {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.64);
+    top: 0;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .popup {
+    position: relative;
+    background-color: #fafafa;
+    width: 80vw;
+    max-width: 650px;
+    height: 90vh;
+    border-radius: 2vh;
+  }
+  
+  .header-fechar-produto-id {
+    position: relative;
+    display: flex;
+    width: 55%;
+    justify-content: space-between;
+    color: #002855;
+    margin-top: 1rem;
+    margin-left: 1rem;
+  }
+  
+  .fechar-popup {
+    font-size: 2rem;
+    color: #002855;
+  }
+  
+  .produto-id {
+    font-size: 1.5rem;
+    color: #002855;
+  }
+  .produto-infos {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* overflow-y: scroll; */
+    height: 100vh;
+  }
+  .imagem-produto-modal {
+    height: 30%;
+    object-fit: cover;
+  }
+  .form-modal {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    max-height: 46%;
+    overflow-y: scroll;
+  }
+  .form-modal::-webkit-scrollbar {
+    width: 4px;
+  }
+  
+  .form-modal::-webkit-scrollbar-track {
+    background: #002855;
+  }
+  
+  .form-modal::-webkit-scrollbar-thumb {
+    background-color: #dcdfe5;
+    width: 100%;
+  }
+  
+  .label-produto-modal {
+    font-size: 2.0rem;
+    color: #002855;
+  }
+  
+  .input-produto-modal {
+    border: none;
+    background-color: #dcdfe5;
+    /* height: 5vw; */
+    border-radius: 10px;
+    font-size: 3rem;
+    font-weight: 500;
+    width: 80%;
+    cursor: pointer;
+  }
+  
+  .input-produto-modal:focus {
+    outline: 1px solid #002855;
+  }
+  
+  .botao-atualizar-modal {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 7%;
+    background-color: #161616;
+    border: none;
+    color: #fafafa;
+    font-size: 1.5rem;
+    border-bottom-left-radius: 2vh;
+    border-bottom-right-radius: 2vh;
+  }
+  
 }
