--- a/REACT/src/components/PagesJSX/ADMProduto/AdmProdutos.css
+++ b/REACT/src/components/PagesJSX/ADMProduto/AdmProdutos.css
@@ -36,15 +36,41 @@
 
 @media (min-width: 500px) {
   .main-adm__produtos {
-    margin: 0 auto;
+      width: 700px;
+      margin: 0 auto;
+      background-color: #fafafa;
+      padding: 5px;
+      height: 93vh;
+      overflow-y: scroll;
+      border-bottom: 1px solid #dcdfe5;
+      border-left: 1px solid #dcdfe5;
+      border-top: 1px solid #dcdfe5;
+      border-radius: 10px;
+    
   }
+
   .produtos {
-    margin-top: 1vh;
+    padding-top: 0.5vh;
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: flex-start;
+    flex-direction: column;
     background-color: #002855;
+    width: 100%;
+    height: 90%;
+    overflow-y: scroll;
     margin: 0 auto;
   }
+
+  .produtos::-webkit-scrollbar {
+    width: 4px;
+  }
+
+  .produtos::-webkit-scrollbar-track {
+    background: #002855;
+  }
+
+  .produtos::-webkit-scrollbar-thumb {
+    background-color: #dcdfe5;
+    width: 100%;
+  }
+
 }
