--- a/REACT/src/components/PagesJSX/Usuario/Usuario.css
+++ b/REACT/src/components/PagesJSX/Usuario/Usuario.css
@@ -102,12 +102,12 @@
 }
 
 @media (min-width: 500px) {
-  .main {
+   .main {
     overflow-y: scroll;
     height: 100vh;
     margin: 0 auto;
-    max-width: 50%;
-  }
+    max-width: 100%;
+  } 
 
   .main::-webkit-scrollbar {
     width: 4px;
@@ -122,7 +122,7 @@
     width: 100%;
   }
 
-  .user-main {
+   .user-main {
     margin: 0 auto;
     display: flex;
     flex-direction: column;
@@ -130,7 +130,7 @@
     background: #fafafa;
     height: 100vh;
     min-height: max-content;
-  }
+  } 
 
   .perfil {
     display: flex;
@@ -148,8 +148,8 @@
   .icone {
     color: #002855;
     font-size: 7.5vw;
-    margin-top: 0.5vh;
-    margin-right: 1vh;
+    margin-top: 0vh;
+    /* margin-right: 1vh; */
   }
 
   .nome-perfil {
@@ -163,6 +163,7 @@
     align-items: center;
     justify-content: center;
     margin-bottom: 10vh;
+    
   }
 
   .dados-user {
@@ -174,7 +175,7 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    width: 90%;
+    width: 50%;
   }
 
   .dados-user .link-user {
